ignore some pycharm working files

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/pythonic-demos.iml
+.idea/vcs.xml
